examples/test/testpolicy15385.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15385
  namespace: namespace360
spec:
  podSelector:
    matchLabels:
      key36: value19
      key11: value37
      key49: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value41
          key20: value17
          key38: value16
      podSelector:
        matchLabels:
          key48: value27
